<resources>
    <string name="app_name">Monday Morning</string>
    <string name="usrnme">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">display name</string>
    <string name="email">email</string>
    <string name="action_search">Search</string>
    <string name="news">news</string>
    <string name="featured">Featured</string>
    <string name="buzz">Buzz</string>
    <string name="lorem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</string>
    <string name="dd_cwc"><![CDATA[DD&CWC]]></string>
    <string name="cc_1_mob">7504874705</string>
    <string name="cc_1_name">Abyakta Patra</string>
    <string name="cc_2_mob">9937682188</string>
    <string name="cc_2_name">Debasis Choudhary</string>
    <string name="cc_3_mob">8596009124</string>
    <string name="cc_3_name">Satyajit Mahapatra</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chief_warden_mob">9437145284</string>
    <string name="chief_warden_name">Prof. Manoranjan Barik</string>
    <string name="chief_warden_qrs">Qrs. No B - 2, NIT Campus</string>
    <string name="citititle">Do you have anything to share? Let your voice be heard. Express your opinions and be a Citizen Journalist.</string>
    <string name="citizen">CITIZEN JOURNALIST</string>
    <string name="comment_approve_message">Your comment is awaiting moderation.</string>
    <string name="comment_hint">Write a comment</string>
    <string name="comment_not_logged_in_message">Your comment was not submitted. Login to post comments.</string>
    <string name="convener_acs_1_name">Biswajit Sahoo</string>
    <string name="convener_acs_1_roll">216ME1358</string>
    <string name="convener_annual_sports_meet_1_mob">8895394751</string>
    <string name="convener_annual_sports_meet_1_name">Animesh Panda</string>
    <string name="convener_annual_sports_meet_2_mobl">7064375857</string>
    <string name="convener_annual_sports_meet_2_name">Vineeth Radhakrishna Kurup</string>
    <string name="convener_innovision_1_mob">9491253615</string>
    <string name="convener_innovision_1_name">Paluru Bhagawan Bharat Kumar</string>
    <string name="convener_innovision_2_mob">8596053889</string>
    <string name="convener_innovision_2_name">VVVD Akhilesh</string>
    <string name="convener_ls_1_name">Abhinav Gupta</string>
    <string name="convener_ls_1_roll">714CE3115</string>
    <string name="convener_nitrutsav_1_mob">9040566869</string>
    <string name="convener_nitrutsav_1_name">Abhishek Kumar</string>
    <string name="convener_nitrutsav_2_mob">7742246275</string>
    <string name="convener_nitrutsav_2_name">Yash Soni</string>
    <string name="convener_ts_1_name">Sandeep Kumar Singh</string>
    <string name="convener_ts_1_roll">216MM2455</string>
    <string name="counselor_mob">9861074304</string>
    <string name="counselor_name">Kalyani Mishra</string>
    <string name="cvr_hall_name">C V Raman Hall</string>
    <string name="cvr_hall_warden_mob">9438246593</string>
    <string name="cvr_hall_warden_name">Prof. Poonam Singh</string>
    <string name="dba_hall_name">Dhiru Bhai Ambani Hall</string>
    <string name="dba_hall_warden_mob">9437245625</string>
    <string name="dba_hall_warden_name">Prof. Himanshu Bhushan Sahu</string>
    <string name="dean_nominee_acs_1_name">Sumit Mahapatra</string>
    <string name="dean_nominee_acs_1_roll">415MA5086</string>
    <string name="dean_nominee_gss_1_name">Rayudu Roshan</string>
    <string name="dean_nominee_gss_1_roll">115CS0258</string>
    <string name="dean_nominee_innovision_name">Satyaroop Patnaik</string>
    <string name="dean_nominee_innovision_roll">715MM1108</string>
    <string name="dean_nominee_ls_1_name">Swayambodha Mohapatra</string>
    <string name="dean_nominee_ls_1_roll">115CS0223</string>
    <string name="dean_nominee_nitrutsav_name">Samyak Das</string>
    <string name="dean_nominee_nitrutsav_roll">115MN0521</string>
    <string name="dean_nominee_sports_fest_name">Debabrata Mohapatra</string>
    <string name="dean_nominee_sports_fest_roll">115ME0450</string>
    <string name="dean_nominee_ts_1_name">Dasari Hemanth Kumar</string>
    <string name="dean_nominee_ts_1_roll">115EE0582</string>
    <string name="dispensary_closed_msg">Closed on Sunday and on national holidays</string>
    <string name="dispensary_timings_holidays">9:00 AM to 11:30 AM</string>
    <string name="dispensary_timings_mon_to_sat">9:00 AM to 11:30 AM\n4:00 PM to 7:00 PM</string>
    <string name="doctor_1_mob">8895298094</string>
    <string name="doctor_1_name">Dr. C. Bhattacharyya</string>
    <string name="doctor_1_post">Head, Health Centre</string>
    <string name="doctor_1_qrs">Qrs. No. D/4, NIT Campus</string>
    <string name="doctor_2_mob">9861303809</string>
    <string name="doctor_2_name">Dr. Anindita Debata</string>
    <string name="doctor_2_qrs">Qrs. No. FR/15, NIT Campus</string>
    <string name="empty_comment_error">Comment can\'t be empty</string>
    <string name="empty_display_name">Display name can\'t be empty</string>
    <string name="empty_email">Email can\'t be empty</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="empty_user_name">User name can\'t be empty</string>
    <string name="events">UPCOMING EVENTS</string>
    <string name="failed_to_refresh">Failed to refresh</string>
    <string name="failedtoload">Failed to Load</string>
    <string name="fest1_name">Tech Fest (Innovision)</string>
    <string name="fest2_name">Spring Fest (Nitrutsav)</string>
    <string name="fest3_name">Annual Sports Meet</string>
    <string name="fire_phone_1">101</string>
    <string name="fire_phone_2">0661-2501201</string>
    <string name="fire_phone_3">0661-2510095</string>
    <string name="gdb_hall_name">G D Birla Hall</string>
    <string name="gdb_hall_warden_mob">7894252258</string>
    <string name="gdb_hall_warden_name">Prof. Ananta Charan Pradhan</string>
    <string name="general_convener_mail">413cy5075@nitrkl.ac.in</string>
    <string name="general_convener_name">Pallerla Rajanish Reddy</string>
    <string name="gotIt">GOT IT</string>
    <string name="gss_name">Games and Sports Society</string>
    <string name="hb_hall_name">Homi Bhabha Hall</string>
    <string name="hb_hall_warden_mob">9437085967</string>
    <string name="hb_hall_warden_name">Prof. Hara Mohan Jena</string>
    <string name="cws_phone_1">0661-2473931</string>
    <string name="cws_phone_2">0661-2473927</string>
    <string name="invalid_display_name">Invalid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Too short password</string>
    <string name="invalid_user_name">Invalid user name</string>
    <string name="joint_general_convener_mob">7077105348</string>
    <string name="joint_general_convener_name">B Narsing Rao</string>
    <string name="kms_hall_name">Kiran Mazumdar Shaw Hall</string>
    <string name="kms_hall_warden_mob">9583866756</string>
    <string name="kms_hall_warden_name">Prof. Monalisa Mishra</string>
    <string name="login_to_comment">Login to comment</string>
    <string name="longpress">Long press for \ncategory articles</string>
    <string name="ls_name">Literary Society</string>
    <string name="mail_now">Mail Now</string>
    <string name="medical_vehicle_person_mob">9437306577</string>
    <string name="medical_vehicle_person_name">Sri Anup Mohanty</string>
    <string name="medical_vehicle_person_qrs">Qrs. No. F/101, NIT Campus</string>
    <string name="mm_facebook">fb.com/mondaymorning.NITRKL</string>
    <string name="mm_location">Student Activity Centre, NIT Rourkela\nRourkela, Orissa 769008</string>
    <string name="mm_location_latitude">22.2519365</string>
    <string name="mm_location_longitude">84.8975774</string>
    <string name="mm_mail">morning.monday@gmail.com</string>
    <string name="mss_hall_name">MS Swaminathan Hall</string>
    <string name="mss_hall_warden_mob">9556425605</string>
    <string name="mss_hall_warden_name">Prof. Surajit Das</string>
    <string name="mv_hall_name">M Visvesvaraya Hall</string>
    <string name="mv_hall_warden_mob">8018667075</string>
    <string name="mv_hall_warden_name">Prof. Manas Ranjan Tripathy</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no_comment_yet">No comments yet.\nBe the first one to comment!</string>
    <string name="no_favourites_yet">No favourite posts</string>
    <string name="no_news_yet">No news yet</string>
    <string name="pharmacist_mob">9937112457</string>
    <string name="pharmacist_name">Sri R. C. Behera</string>
    <string name="pharmacist_qrs">Qrs. No. F/46, NIT Campus</string>
    <string name="picweek">PICK OF THE WEEK</string>
    <string name="post_ids">post_ids[%d]</string>
    <string name="pref_description_load_images">Turn off to save data.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_load_images">Load images</string>
    <string name="pulse">STUDENT PULSE</string>
    <string name="ques">Question</string>
    <string name="quesprompt">If you have any queries and you don\'t know how to reach the authorities - ask a question anonymously and we\'ll get you your answer</string>
    <string name="remove_favourites">Favourites removed</string>
    <string name="reply_hint">Write a reply</string>
    <string name="report_bug_mail_address">tech.mondaymorning@gmail.com</string>
    <string name="report_bug_mail_body">Provide details about bug and about the activities that are causing the bug.\nPlease attach screenshots if possible.</string>
    <string name="report_bug_mail_chooser_title">Report Bug</string>
    <string name="sd_hall_name">Satish Dhawan Hall</string>
    <string name="sd_hall_warden_mob">7381108201</string>
    <string name="sd_hall_warden_name">Prof. Suman Jha</string>
    <string name="vs_hall_name">Vikram Sarabhai Hall</string>
    <string name="vs_hall_warden_mob">6612511</string>
    <string name="vs_hall_warden_name">Prof. Sukesh Chandra Mohanty</string>
</resources>